@@ -22,7 +22,7 @@ configure syslog compatible remote UDP system logging, see the
 With this version runit supports running under sysvinit on the Solaris
 platform.
 Replacing init on Solaris is not yet supported.
-The service directory now defaults to /var/service instead of /service.
+The services directory now defaults to /var/service/ instead of /service/.
 <h3>0.10.0 to 0.11.0 or 0.11.1 or 0.11.2</h3>
 This version introduces the new <a href="chpst.8.html">chpst</a> program,
 which changes the process state as specified by command line options, and
